# CarrotBot

./: Procfile  README.md  daboizzzBot.py  leaderboard_4v4.csv  leaderboard_doubles.csv  leaderboard_fours.csv  leaderboard_overall.csv  leaderboard_solos.csv  leaderboard_threes.csv  prefixes.json  pyproject.toml  requirements.txt
.aws/: credentials
CarrotBot/: Procfile  bot.py  main.py  prefixes.json  requirements.txt
CarrotBot/CarrotBot/: bot.py  main.py
CarrotBot/cogs/: Leaderboards.py  VCBlock.py  admin.py  daboiz.py  guildjoin.py  logger.py  prefixes.py  premium.py  showhelp.py  tickets.py  whoop.py
daboizzBot/: bot.py  main.py
